# video-extractor

./: README.md  example.py  pyproject.toml
src/video_extractor/: __init__.py  download.py  utils.py
